--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <h1>Assignment 3</h1>
         <h4>Please Select a Time Period</h4>
-        <input type="text" name="datetimes" />
+        <input type="text" name="datetimes" value="05/09/2011 - 05/12/2011"/>
         <br><br>
         <div id="map">
 
