--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <h1>Assignment 3</h1>
-        <h4>Please Select a Time Period</h4>
+        <h4>Please Select a time period which you would like to analyze:</h4>
         <input type="text" name="datetimes" value="05/09/2011 - 05/12/2011"/>
         <br><br>
         <div id="map">
