--- a/index.html
+++ b/index.html
@@ -24,16 +24,20 @@
         <div id="map">
 
         </div>
+        <div id="timeline">
 
+        </div>
 
         <!-- <script src="jquery.min.js"></script> -->
         <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-
-        <script type="text/javascript" src="main.js"></script>
+        <script src="https://d3js.org/d3.v6.js"></script>
         <script type="text/javascript" src="microblogMap.js"></script>
+        <script type="text/javascript" src="Timeline.js"></script>
+        <script type="text/javascript" src="main.js"></script>
+   
 
     </body>
 
