timeline good now :)

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
         <script src="https://d3js.org/d3.v6.js"></script>
+        <script src = d3-timeline.js></script>
         <script type="text/javascript" src="microblogMap.js"></script>
         <script type="text/javascript" src="Timeline.js"></script>
         <script type="text/javascript" src="main.js"></script>
